--- a/test.tex
+++ b/test.tex
@@ -302,11 +302,11 @@ with the sum running from 2 to $R_{1} /\lambdabar_{e}$. This implies:
 $$
 R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15.77465 ~ Gly
 $$
-very close (0.4 ppm) to $R_{1} = ( p_{G} /p_{0} )(\beta R R^{\prime})^{1/2}$, where $p_{G} = P/2^{127/2}$, with $P = \lambdabar_e / l_P$, $\beta = (H - p)^{-1}$ the Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Lenz-Wyler value $p$ (Section 9.2). Moreover, there is a direct connection with the Grandcosmos radius and the topon, to 0.90 \%: $R_1^3/R_{GC}^2 \approx \lambdabar_M$. The analysis of deviation leads to (0.3 ppm):
+very close (0.4 ppm) to $R_{1} = ( p_{G} /p_{0} )(\beta R R^{\prime})^{1/2}$, where $p_{G} = P/2^{127/2}$, with $P = \lambdabar_e / l_P$, $\beta = (H - p)^{-1}$ the Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Lenz-Wyler value $p$ (Section 9.2). Moreover, there is a direct connection with the Grandcosmos radius and the topon, to 0.90 \%:
 \begin{equation}
-nP \approx (aa^{\prime})^2 (FR_1/R^{\prime})^3
-\end{equation}
-with $n$ and $F$ the neutron/electron and Fermi/electron mass ratios (section 9.4), thus confirming the $G$ value to 90 ppb.
+\lambdabar_M = 2l_p^2/R \approx R_1^3/R_{GC}^2
+\end{equation}  
+This \textit{synthesis relation} confirms the coherence of the procedure. It will be of central importance in the following, (section 7.4) where the above lengths $l_P, $R$, $\lambdabar_M$,$ and $R_GC$ will be connected with $R^{\prime}$, the holographic reduction length of the Grandcosmos, and the following Kotov length. 
 
 \subsection{The Cosmic Coherent Oscillation (CCO)}
 
