--- a/test.tex
+++ b/test.tex
@@ -306,7 +306,7 @@ very close (0.4 ppm) to $R_{1} = ( p_{G} /p_{0} )(\beta R R^{\prime})^{1/2}$, wh
 \begin{equation}
 \lambdabar_M = 2l_p^2/R \approx R_1^3/R_{GC}^2
 \end{equation}  
-This \textit{synthesis relation} confirms the coherence of the procedure. It will be of central importance in the following, (section 7.4) where the above lengths $l_P, $R$, $\lambdabar_M$,$ and $R_GC$ will be connected with $R^{\prime}$, the holographic reduction length of the Grandcosmos, and the following Kotov length. 
+This \textit{synthesis relation} confirms the coherence of the procedure. It will be of central importance in the following, (section 7.4) where the above lengths $l_P, $R$, $\lambdabar_M$, and $R_GC$ will be connected with $R^{\prime}$, the above holographic reduction length of the Grandcosmos, and the following Kotov length. 
 
 \subsection{The Cosmic Coherent Oscillation (CCO)}
 
