--- a/test.tex
+++ b/test.tex
@@ -136,7 +136,57 @@ Contents
  11. Conclusions: Cosmic Simplicity at work
  
  12. Predictions
-    
+
+
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
+\section {Discussion}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
+
+There is presently an intense debate in physics community. Only a minority believes in a 
+Final Theory, while a large majority have abandoned such hope and believes seriously in the extreme
+consequence of the `Anthropic Principle`, the Multiverse conundrum. The present article settles the
+debate in favor of a \textit{single steady-state} cosmos.
+
+This article confirms direct connections \cite{Sanchez1} between physical and biological parameters. So,
+while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the
+`Inverse Anthropic Principle` is more logical, stating that an all-deterministic single Cosmos
+implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-
+called `theory` with too much missing links \cite{Chauvin}. The fundamental hypothesis of
+this article is that the Cosmos is a computer. A common point with the brain is the multi-base
+character, experienced in musical sensation. Thus, \textit{intelligent life must be universal}. The famous Fermi
+question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a
+dogmatic community.
+
+Another type of separation exists, however with not any debate: only a small minority thinks Physics
+and Mathematics are unified, while a large majority separates the two domains (so separating also
+Biology). This is illogical, because if it is admitted that physics is based on mathematics, one must admit that the dimensionless parameters are mathematical constants. The present article settle the question by showing, \textit{for the first time, a series of ppb relations}. Hence, it is not the Univrrse which is underdetermined, but rather that the present-day mathematics are still in infancy, not realizing for instance that the discovery of sporadic groups is a crucial discovery for physics, probably tied to octonion algebra. In particular, it is clearly shown that Grandcosmos uses optimal physics-mathematics dimensionless constants as
+calculation bases and that they are present in DNA characteristics \cite{Sanchez1}. The present article shows
+definitely the liaisons with $e$, $\pi$ and $\gamma$, as well as very special rational approximations of 
+them, and rehabilitates string theories, also abandoned by a majority \cite{Woit}.
+
+There is also the Determinism separation, a majority believing seriously that `God plays dices`,
+in contradiction with our Cosmic Computing Principle. The $c$-free analysis gives simply and
+directly the Supercycle period in an all-deterministic Grandcosmos, as it gives in an elementary
+calculation the visible Universe horizon radius, in a formula which was present for a century in
+astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
+This is tied to the application of the exclusion principle that Eddington dared to apply in
+cosmology. For this reason he was declared as a `crakpot` and his theory discarded by a majority.
+Fortunately, the large theoretical advance of Eddington is now recognized \cite{Larin,Durham}, but without
+mentioning a crucial point: he predicted the tau fermion with a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}.
+
+The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least a part of these works is very pertinent.
+
+It seems that the pre-scientific role of chance is a common point between three misleading views
+in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation
+with a scientific theory. Secondly, in quantum physics, the so-called `uncertainty principles`, which are
+only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier
+transform properties. Thirdly, in cosmology, the recurse to the Multiverse conundrum.
+
+The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of Science. It is strange, and troubling, that this term \textit{immergence} is a neologism.
+
+Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalization of $e$ and $\pi$. This have been shown in this article.
+
+
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The Principles of Hierarchy and Computation}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
@@ -1105,34 +1155,6 @@ Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \textit{The ultimate theory must explain these ppb relations.}
 
 
-\begin{table*}
- \caption{Topological Axis Data with \textit{invariant} $R_{Hubble}  \approx$ 13.812 ~Gly (70.790 km/s$\cdot$Mpc) }
-  \centering
-  \begin{tabular}{llllll}
-    \toprule
-    \multicolumn{6}{c}{Part}                   \\
-    \cmidrule(r){1-6}
-   Element Name     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions \\
-    \midrule
-    string & 0  & 2 & 0.347 &  & $ m_{string} \approx$ 2.1~ MeV ~? \\
-    gluon  & 1 & 6 & 1.040 &  & $m_{gluon} \approx$ 8.6~ MeV ~? \\  
-    mean pion & 2  & 10 & 1.733 & lnln(268.60)$\approx$ 1.722 &  \\ 
-    H Atom Diameter & 2  & 10 & 1.733 & lnln(274.22) $\approx$ 1.725  &  \\
-    Half Mean Weak Boson & 3  & 14 & 2.426 & lnln(8.378~$\cdot~10^4)\approx$ 2.428  &   \\
-    Higgs Boson & - & $\gamma\Gamma \approx$ 14.533 & 2.518 &lnln(2.449$~\cdot~10^5)\approx$ 2.518& $m_{Higgs} \approx$ 125.175$~ GeV ~$ ? \\ 
-    Thermal Photon & 4  & 18 & 3.119 & lnln($hc/2k\theta_{CMB}\lambdabar_e) \approx$ 3.035 &  \\
-    Boson GUT pion & 5  & 22 & 3.812 & & $m_{GUT} \approx 2.30\cdot 10^{16}$ GeV \\
-    Photon & 5.5  & 24 & 4.159 & - & $m_{ph} = \hbar/cl_K \approx 1.2\cdot 10^{-55}$kg? \\
-    Kotov perimeter & 5.5  & 24 & 4.159 & & lnln($2\pi l_K /r_e)\approx 4.159$ \\
-    Hubble perimeter & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(2\pi R_{Hubble} /\lambdabar_e)\approx$ 4.5059  \\
-    Graviton & 6  & 26 & 4.505 &  & $ m_{gr} \approx 3.7\cdot 10^{-67}$ kg  \\
-    SuperCycle & 7  & 30 & 5.199 & & lnln$(T/t_e) \approx$ 5.199 \\
-    Topon & - & 2$e^e$ & 5.253 &  & lnln$(\lambdabar_e/\lambdabar_M) \approx$ 5.523 \\
-    GrandCosmos & $e^2$  & - & 5.432 & & lnln$(R_{GC}/\lambdabar_e)\approx$ 5.433  \\
-    \bottomrule
-  \end{tabular}
-  \label{tab:table}
-\end{table*}
 
 
 
@@ -1183,6 +1205,14 @@ transform properties. Thirdly, in cosmology, the recurse to the Multiverse conun
 The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of Science. It is strange, and troubling, that this term \textit{immergence} is a neologism.
 
 Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalization of $e$ and $\pi$. This have been shown in this article.
+
+
+
+
+
+
+
+
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section {Conclusions: Cosmic Simplicity at work}
@@ -1284,6 +1314,8 @@ the Holic Principle, which explains why normal space has 3 dimensions.
 In short, the rediscovered Cosmos unifies the two main modern cosmologies in a rapid matter-
 antimatter oscillatory bounce. The Cosmos appear as \textit{simple, unique, permanent, computational,
 deterministic, trans-planckian, cyclic, topological and inverse-anthropic}. It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of \textit{Philosophy, Mathematics, Physics, Chemistry, Computational Science and Biology}.
+
+
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{Predictions}\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
