--- a/test.tex
+++ b/test.tex
@@ -147,15 +147,7 @@ Final Theory, while a large majority have abandoned such hope and believes serio
 consequence of the `Anthropic Principle`, the Multiverse conundrum. The present article settles the
 debate in favor of a \textit{single steady-state} cosmos.
 
-This article confirms direct connections \cite{Sanchez1} between physical and biological parameters. So,
-while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the
-`Inverse Anthropic Principle` is more logical, stating that an all-deterministic single Cosmos
-implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-
-called `theory` with too much missing links \cite{Chauvin}. The fundamental hypothesis of
-this article is that the Cosmos is a computer. A common point with the brain is the multi-base
-character, experienced in musical sensation. Thus, \textit{intelligent life must be universal}. The famous Fermi
-question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a
-dogmatic community.
+%This article confirms direct connections \cite{Sanchez1} between physical and biological parameters. So, while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the`Inverse Anthropic Principle` is more logical, stating that an all-deterministic single Cosmos implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-called `theory` with too much missing links \cite{Chauvin}. The fundamental hypothesis of this article is that the Cosmos is a computer. A common point with the brain is the multi-base character, experienced in musical sensation. Thus, \textit{intelligent life must be universal}. The famous Fermi question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a dogmatic community.
 
 Another type of separation exists, however with not any debate: only a small minority thinks Physics
 and Mathematics are unified, while a large majority separates the two domains (so separating also
@@ -174,7 +166,7 @@ cosmology. For this reason he was declared as a `crakpot` and his theory discard
 Fortunately, the large theoretical advance of Eddington is now recognized \cite{Larin,Durham}, but without
 mentioning a crucial point: he predicted the tau fermion with a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}.
 
-The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least a part of these works is very pertinent.
+%The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least a part of these works is very pertinent.
 
 It seems that the pre-scientific role of chance is a common point between three misleading views
 in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation
@@ -182,7 +174,7 @@ with a scientific theory. Secondly, in quantum physics, the so-called `uncertain
 only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier
 transform properties. Thirdly, in cosmology, the recurse to the Multiverse conundrum.
 
-The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of Science. It is strange, and troubling, that this term \textit{immergence} is a neologism.
+%The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of Science. It is strange, and troubling, that this term \textit{immergence} is a neologism.
 
 Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalization of $e$ and $\pi$. This have been shown in this article.
 
