--- a/test.tex
+++ b/test.tex
@@ -1151,13 +1151,8 @@ Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-\section {Discussion}
+\section {Conclusions: Cosmic Simplicity at work}\section {Discussion}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-
-There is presently an intense debate in physics community. Only a minority believes in a 
-Final Theory, while a large majority have abandoned such hope and believes seriously in the extreme
-consequence of the `Anthropic Principle`, the Multiverse conundrum. The present article settles the
-debate in favor of a \textit{single steady-state} cosmos.
 
 This article confirms direct connections \cite{Sanchez1} between physical and biological parameters. So,
 while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the
@@ -1167,48 +1162,9 @@ called `theory` with too much missing links \cite{Chauvin}. The fundamental hypo
 this article is that the Cosmos is a computer. A common point with the brain is the multi-base
 character, experienced in musical sensation. Thus, \textit{intelligent life must be universal}. The famous Fermi
 question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a
-dogmatic community.
-
-Another type of separation exists, however with not any debate: only a small minority thinks Physics
-and Mathematics are unified, while a large majority separates the two domains (so separating also
-Biology). This is illogical, because if it is admitted that physics is based on mathematics, one must admit that the dimensionless parameters are mathematical constants. The present article settle the question by showing, \textit{for the first time, a series of ppb relations}. Hence, it is not the Univrrse which is underdetermined, but rather that the present-day mathematics are still in infancy, not realizing for instance that the discovery of sporadic groups is a crucial discovery for physics, probably tied to octonion algebra. In particular, it is clearly shown that Grandcosmos uses optimal physics-mathematics dimensionless constants as
-calculation bases and that they are present in DNA characteristics \cite{Sanchez1}. The present article shows
-definitely the liaisons with $e$, $\pi$ and $\gamma$, as well as very special rational approximations of 
-them, and rehabilitates string theories, also abandoned by a majority \cite{Woit}.
-
-There is also the Determinism separation, a majority believing seriously that `God plays dices`,
-in contradiction with our Cosmic Computing Principle. The $c$-free analysis gives simply and
-directly the Supercycle period in an all-deterministic Grandcosmos, as it gives in an elementary
-calculation the visible Universe horizon radius, in a formula which was present for a century in
-astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
-This is tied to the application of the exclusion principle that Eddington dared to apply in
-cosmology. For this reason he was declared as a `crakpot` and his theory discarded by a majority.
-Fortunately, the large theoretical advance of Eddington is now recognized \cite{Larin,Durham}, but without
-mentioning a crucial point: he predicted the tau fermion with a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}.
-
-The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least a part of these works is very pertinent.
-
-It seems that the pre-scientific role of chance is a common point between three misleading views
-in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation
-with a scientific theory. Secondly, in quantum physics, the so-called `uncertainty principles`, which are
-only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier
-transform properties. Thirdly, in cosmology, the recurse to the Multiverse conundrum.
+dogmatic community. The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least a part of these works is very pertinent.
 
 The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of Science. It is strange, and troubling, that this term \textit{immergence} is a neologism.
-
-Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalization of $e$ and $\pi$. This have been shown in this article.
-
-
-
-
-
-
-
-
-
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-\section {Conclusions: Cosmic Simplicity at work}
-\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ \textit{Back to Cosmos}}
 
 The application of the old direct scientific method, looking for fine tuning between physical
 parameters leads to a return to the Perfect Cosmological Principle implying a steady-state Cosmos,
