--- a/test.tex
+++ b/test.tex
@@ -1213,7 +1213,7 @@ Poincar\'{e}, the father of 4D Relativity Theory recommended. Indeed their confu
 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-\section {Conclusions: Cosmic Simplicity at work}\section {Discussion}
+\section {Conclusions: Cosmic Simplicity at work}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 The simplest model, the gravitational Hydrogen molecule gives $R$, explaining the 2 factor and
 justifying the elimination of $c$, as in the Haas-Bohr model \cite{Sanchez1}. This corresponds to a Hubble constant 70.790
