--- a/test.tex
+++ b/test.tex
@@ -142,41 +142,27 @@ Contents
 \section {The debate, Hierarchy and Computation}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-There is presently an intense debate in physics community. Only a minority believes in a 
-Final Theory, while a large majority have abandoned such hope and believes seriously in the extreme
-consequence of the `Anthropic Principle`, the Multiverse conundrum. The present article settles the
-debate in favor of a \textit{single steady-state} cosmos.
+There is presently an intense debate in physics community. Only a minority believes in an Ultimate Theory, while a large majority have abandoned such hope and believes seriously in the extreme consequence of the `Anthropic Principle`, the Multiverse conundrum\cite{Carr}. The present article settles the debate in favor of a \textit{single steady-state flickering} cosmos, a kind of synthesis between the two historic main cosmologies, since it can be wieved as a \textit{Permanent Big Bang}.
 
-%This article confirms direct connections \cite{Sanchez1} between physical and biological parameters. So, while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the`Inverse Anthropic Principle` is more logical, stating that an all-deterministic single Cosmos implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-called `theory` with too much missing links \cite{Chauvin}. The fundamental hypothesis of this article is that the Cosmos is a computer. A common point with the brain is the multi-base character, experienced in musical sensation. Thus, \textit{intelligent life must be universal}. The famous Fermi question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a dogmatic community.
+The origin of this discrepancy is that the unicity of Physics has been wiped out in the multiplicity of mathematics. Only a small minority thinks Physics and Mathematics are really unified, while a large majority separates the two domains (so separating also
+Biology). This is illogical, because if it is admitted that physics is based on mathematics, one must admit that the measured dimensionless parameters are mathematical constants. However this argument is  valid only if there is a single Cosmos. The present article settle the question by showing, \textit{for the first time, a series of ppb relations, involving $e$, $\pi$ and $\gamma$ relate central dimensionless parameters} (section 9.4). Hence, the Cosmos is unique, and the present-day mathematics are still in infancy. In particular, this article shows that the discovery of the sporadic groups, with, in particular, the Moonshine correlation\cite{Borcherds} is a crucial discovery for physics. 
 
-Another type of separation exists, however with not any debate: only a small minority thinks Physics
-and Mathematics are unified, while a large majority separates the two domains (so separating also
-Biology). This is illogical, because if it is admitted that physics is based on mathematics, one must admit that the dimensionless parameters are mathematical constants. The present article settle the question by showing, \textit{for the first time, a series of ppb relations}. Hence, it is not the Univrrse which is underdetermined, but rather that the present-day mathematics are still in infancy, not realizing for instance that the discovery of sporadic groups is a crucial discovery for physics, probably tied to octonion algebra. In particular, it is clearly shown that Grandcosmos uses optimal physics-mathematics dimensionless constants as
-calculation bases and that they are present in DNA characteristics \cite{Sanchez1}. The present article shows
-definitely the liaisons with $e$, $\pi$ and $\gamma$, as well as very special rational approximations of 
-them, and rehabilitates string theories, also abandoned by a majority \cite{Woit}.
+Another reason for this debate unicity-multiplicity is that pure mathematicians believe that progress can be obtained only when the Ultimate Theory has been discovered. The history of Physics shows exactly the contrary: one can progress without knowing the ultimate laws, this no-said principle can be called the \textit{'Hierarchy Principle'}. In particular, when Eddington\cite{Eddington} dared to apply the exclusion principle in cosmology, his theory was discarded by a majority. Fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. The present day string theory defines a Multiverse, leading to its reject\cite{Woigt}. However, the present article rehabiltates the most controversial \textit{tachyonic} bosonic string theory (see Fig. 1).
 
-There is also the Determinism separation, a majority believing seriously that `God plays dices`,
-in contradiction with our Cosmic Computing Principle. The $c$-free analysis gives simply and
-directly the Supercycle period in an all-deterministic Grandcosmos, as it gives in an elementary
-calculation the visible Universe horizon radius, in a formula which was present for a century in
-astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
-This is tied to the application of the exclusion principle that Eddington dared to apply in
-cosmology. For this reason he was declared as a `crakpot` and his theory discarded by a majority.
-Fortunately, the large theoretical advance of Eddington is now recognized \cite{Larin,Durham}, but without
-mentioning a crucial point: he predicted the tau fermion with a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}.
+There is also the Determinism separation, a majority believing seriously that `God plays dices'. It seems that the pre-scientific role of chance is a common point between three misleading views in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation with a scientific theory (see Discussion). Secondly, in quantum physics, the so-called `uncertainty principles`, which are only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier transform properties. Thirdly, in cosmology, the recurse to the above Multiverse conundrum.
+
+The present article settles also this debate by proposing that the Cosmos is ruled by an \textit{'Optimal Computation Principle'}. It was shown that main dimensionless constants are present both in musical scales and in DNA characteristics \cite{Sanchez1}. This article goes further, by showing they are textit{calculation bases}.
+
+The abnormal efficiency of elementary 3-fold dimensional analysis is explained in section 5. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the elementary Holic Principle (section 9). It gives also in an elementary calculation the \textit{invariant} Hubble constant, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
+
 
 %The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least a part of these works is very pertinent.
 
-It seems that the pre-scientific role of chance is a common point between three misleading views
-in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation
-with a scientific theory. Secondly, in quantum physics, the so-called `uncertainty principles`, which are
-only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier
-transform properties. Thirdly, in cosmology, the recurse to the Multiverse conundrum.
+
 
 %The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of Science. It is strange, and troubling, that this term \textit{immergence} is a neologism.
 
-Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalization of $e$ and $\pi$. This have been shown in this article.
+Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{rationalization of $e$ and $\pi$}. This is shown in this article (section 9.3).
 
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio Planck/proton mass, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, the authors condidered rather the inverse of $a$ and $a_G$, noted $\alpha$and $\alpha_G$. The present article will show that our notation, following Eddington, is far more appropriate.
 
