--- a/test.tex
+++ b/test.tex
@@ -155,13 +155,6 @@ The present article settles also this debate by proposing that the Cosmos is rul
 
 The abnormal efficiency of elementary 3-fold dimensional analysis is explained in section 5. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the elementary Holic Principle (section 9). It gives also in an elementary calculation the \textit{invariant} Hubble constant, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
 
-
-%The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least a part of these works is very pertinent.
-
-
-
-%The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of Science. It is strange, and troubling, that this term \textit{immergence} is a neologism.
-
 Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{rationalization of $e$ and $\pi$}. This is shown in this article (section 9.3).
 
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio Planck/proton mass, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, the authors condidered rather the inverse of $a$ and $a_G$, noted $\alpha$and $\alpha_G$. The present article will show that our notation, following Eddington, is far more appropriate.
@@ -170,11 +163,11 @@ One can read \cite{Carr}: \textit{“For example, the size of a planet is the ge
 
 The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed \cite{Eddington}, must be permanent}. Extending this to the standard spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology and the starting point of Coherent Cosmology \cite{Sanchez1}.
 
-Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. However, his work was rejected for obscure reasons and this rejection was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed since far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Thus, through the above Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
+%Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. However, his work was rejected for obscure reasons and this rejection was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed since far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Thus, through the above Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
-\textit{This article shows that physics is a unique part of presently incomplete mathematics}. We refute here the Multiverse hypothesis by showing very precise fine-tuning (untill $10^{-9})$ precision between main physical and the mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study implies the 26 sporadic groups and confirms the super-string theory, but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
+%\textit{This article shows that physics is a unique part of presently incomplete mathematics}. We refute here the Multiverse hypothesis by showing very precise fine-tuning (untill $10^{-9})$ precision between main physical and the mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study implies the 26 sporadic groups and confirms the super-string theory, but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
 
-\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the cosmological computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions? We propose that the parameters are optimal bases in a deterministic computing Cosmos. They appear indeed in DNA characteristics and triple-point temperatures of mammals and main molecules \cite{Sanchez1}.
+%\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the cosmological computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions? We propose that the parameters are optimal bases in a deterministic computing Cosmos. They appear indeed in DNA characteristics and triple-point temperatures of mammals and main molecules \cite{Sanchez1}.
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the standard Copenhagen statistical interpretation of quantum mechanics.
 
