--- a/test.tex
+++ b/test.tex
@@ -81,7 +81,7 @@ The antique concept of permanent Cosmos is reintroduced as a perfect determinist
 Contents
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-1. The debate, Hierarchy and Computation
+1. The debates settled by Hierarchy and Computation
 
 2. The Cosmic Fine-Tuning and the Topological Axis
 
@@ -139,15 +139,17 @@ Contents
 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-\section {The debate, Hierarchy and Computation}
+\section {The debates settled by Hierarchy and Computation}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-There is presently an intense debate in physics community. Only a minority believes in an Ultimate Theory, while a large majority have abandoned such hope and believes seriously in the extreme consequence of the `Anthropic Principle`, the Multiverse conundrum\cite{Carr}. The present article settles the debate in favor of a \textit{single steady-state flickering} cosmos, a kind of synthesis between the two historic main cosmologies, since it can be wieved as a \textit{Permanent Big Bang}.
+There is presently an intense debate in the physics community. Only a minority believes in an Ultimate Theory, while a large majority have abandoned such hope and believes seriously in the extreme consequence of the `Anthropic Principle`, the Multiverse conundrum\cite{Carr}. The present article settles the debate in favor of a \textit{single steady-state flickering} cosmos, a kind of synthesis between the two historic main cosmologies, since it can be wieved as a \textit{Permanent Big Bang}.
 
 The origin of this discrepancy is that the unicity of Physics has been wiped out in the multiplicity of mathematics. Only a small minority thinks Physics and Mathematics are really unified, while a large majority separates the two domains (so separating also
-Biology). This is illogical, because if it is admitted that physics is based on mathematics, one must admit that the measured dimensionless parameters are mathematical constants. However this argument is  valid only if there is a single Cosmos. The present article settle the question by showing, \textit{for the first time, a series of ppb relations, involving $e$, $\pi$ and $\gamma$ relate central dimensionless parameters} (section 9.4). Hence, the Cosmos is unique, and the present-day mathematics are still in infancy. In particular, this article shows that the discovery of the sporadic groups, with, in particular, the Moonshine correlation\cite{Borcherds} is a crucial discovery for physics. 
+Biology). The criteria for the uniqueness of the Cosmos is the mathematical character of the measured dimensionless parameters. Indeed, \textit{for the first time, a series of ppb relations involves $e$, $\pi$ and $\gamma$ end central dimensionless parameters} (section 9.4). In particular, this article shows that the discovery of the sporadic groups, with, in particular, the Moonshine correlation\cite{Borcherds} is a crucial discovery for physics. 
 
-Another reason for this debate unicity-multiplicity is that pure mathematicians believe that progress can be obtained only when the Ultimate Theory has been discovered. The history of Physics shows exactly the contrary: one can progress without knowing the ultimate laws, this no-said principle can be called the \textit{'Hierarchy Principle'}. In particular, when Eddington\cite{Eddington} dared to apply the exclusion principle in cosmology, his theory was discarded by a majority. Fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. The present day string theory defines a Multiverse, leading to its reject\cite{Woigt}. However, the present article rehabiltates the most controversial \textit{tachyonic} bosonic string theory (see Fig. 1).
+Another reason for this debate unicity-multiplicity is that pure mathematicians believe that progress can be obtained only when the Ultimate Theory has been discovered. However, the history of Physics shows that one can progress without knowing the ultimate laws. Tbis no-said principle can be called the \textit{'Hierarchy Principle'}. 
+
+%In particular, when Eddington\cite{Eddington} dared to apply the exclusion principle in cosmology, his theory was discarded by a majority. Fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. The present day string theory defines a Multiverse, leading to its reject\cite{Woigt}. However, the present article rehabiltates the most controversial \textit{tachyonic} bosonic string theory (see Fig. 1).
 
 There is also the Determinism separation, a majority believing seriously that `God plays dices'. It seems that the pre-scientific role of chance is a common point between three misleading views in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation with a scientific theory (see Discussion). Secondly, in quantum physics, the so-called `uncertainty principles`, which are only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier transform properties. Thirdly, in cosmology, the recurse to the above Multiverse conundrum.
 
